--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
-XXX cubase screenshot
-
 keywords / content description
+
+w3c check
+pagespeed insights
+lighthouse rating
+
+impressum zurück zur hauptseite
